--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   flutter_bloc:   
   logger: ^2.0.0 
+  firebase_core: ^2.16.0
+  cloud_firestore: ^4.9.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
