--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  google_fonts: ^6.1.0
   flutter_bloc:   
   logger: ^2.0.0 
   firebase_core: ^2.16.0
