--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   flutter_bloc:   
   logger: ^2.0.0 
   firebase_core: ^2.16.0
+  firebase_auth: ^4.10.1
+  firebase_database: ^10.2.7
   cloud_firestore: ^4.9.2
+  equatable: ^2.0.5
+  flow_builder: ^0.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
