--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.1
   firebase_database: ^10.2.7
+  google_sign_in: ^6.1.5
   cloud_firestore: ^4.9.2
   equatable: ^2.0.5
   flow_builder: ^0.0.9
